# LightDiagram

./: CMakeLists.txt  CMakePresets.json  build.bat  cpp.hint  requirement package.txt
LLMToolkit/: CMakeLists.txt  LLMToolkit.cpp  LLMToolkit.h  Spack.cpp  Spack.h  Spark.cpp
LLMToolkit/LLM/: Spark.h
LLMToolkit/llama/: CMakeLists.txt
LLMToolkit/llama/ggml/: CMakeLists.txt
LLMToolkit/llama/ggml/src/: ggml-backend.cpp  ggml-common.h
LLMToolkit/llama/include/: llama.h  llamakit.h
LLMToolkit/llama/src/: CMakeLists.txt  llama-vocab.cpp  llama.cpp  llamakit.cpp
LightDiagram/: CMakeLists.txt  LightDiagram.cpp  LightDiagram.h  demo.cpp
LightDiagram/Core/: Interface.cpp  Interface.h  LF_Architecture.cpp  LF_Architecture.h  LF_Cache.h  LF_Config.h  LF_Container.h  LF_Exception.cpp  LF_Exception.h  LF_RAII.cpp  LF_RAII.h  LF_Time.cpp  LF_Time.h  LF_Type.h  LF_cache.cpp  LString.cpp  LString.h  Peocess.cpp  Process.cpp  Process.h  algorithm.h  anyclass.h  anygraph.h  beepkit.h  cJSON.c  some_features.cpp  some_features.h  static_exist.h  static_indicator.h  static_traits.cpp  static_traits.h  uni_utility.cpp  uni_utility.h  unicode-data.cpp  unicode-data.h  unicode.cpp  unicode.h
LightDiagram/Core/Header/: LF_Architecture.h  LF_Config.h  LF_Container.h  LF_Exception.h  LF_RAII.h  LF_Type.h  LF_cache.h  anyclass.h  beepkit.h  some_features.h  static_exist.h  static_indicator.h  static_traits.h  uni_utility.h
LightDiagram/Core/Header/ArchCom/: Interface.h
LightDiagram/Engine/: Process.cpp  Process.h
LightDiagram/Extension/: KitSocket.cpp
LightDiagram/Extension/Header/: KitSocket.h  LightThread.h
LightDiagram/Utility/: FileSystem.h
LightMath/: CMakeLists.txt  CorrelationAnalysis.cpp  CorrelationAnalysis.h  DistributionCheck.cpp  DistributionCheck.h  LightMath.cpp  LightMath.h  MathConfig.h
LightMath/Math/: CorrelationAnalysis.cpp  CorrelationAnalysis.h  DecisionTree.cpp  DecisionTree.h  DistributionCheck.cpp  DistributionCheck.h  Fourier.cpp  Fourier.h  Graph.cpp  Graph.h  MathConfig.cpp  MathConfig.h  MathConfig.hpp  OpenCVH.h  Perceptron.h  Perceptron.hpp  Predict.cpp  Predict.h  Pretreatment.cpp  Pretreatment.h
LineScript/: CMakeLists.txt  Config.cpp  Config.h  Lang.cpp  Lang.h  LineScript.cpp
OpenXLSX/: CMakeLists.txt
Test/: CMakeLists.txt  test.cpp  test.h
Test/data/: 1.in  2.in
WebServer/: CMakeLists.txt  Channel.cpp  Channel.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  HttpData.cpp  HttpData.h  Main.cpp  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  Util.cpp  Util.h
WebServer/base/: AsyncLogging.cpp  AsyncLogging.h  CMakeLists.txt  Condition.h  CountDownLatch.cpp  CountDownLatch.h  CurrentThread.h  FileUtil.cpp  FileUtil.h  LogFile.cpp  LogFile.h  LogStream.cpp  LogStream.h  Logging.cpp  Logging.h  MutexLock.h  Thread.cpp  Thread.h
